// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LogServer: get /runs ('host' / 'sqlite') > returns a 200 with all runs 1`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 2,
        "name": "run-1",
        "status": "running",
      },
      "id": "1",
      "relationships": {
        "experiment": {
          "data": {
            "id": "1",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "2",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
    {
      "attributes": {
        "lastLogNumber": 1,
        "name": "run-2",
        "status": "running",
      },
      "id": "2",
      "relationships": {
        "experiment": {
          "data": {
            "id": "1",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "3",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
}
`;

exports[`LogServer: get /runs ('host' / 'sqlite') > returns a 200 with all runs with requested related experiment 1`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 2,
        "name": "run-1",
        "status": "running",
      },
      "id": "1",
      "relationships": {
        "experiment": {
          "data": {
            "id": "2",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "2",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
    {
      "attributes": {
        "lastLogNumber": 0,
        "name": "run-2",
        "status": "completed",
      },
      "id": "2",
      "relationships": {
        "experiment": {
          "data": {
            "id": "2",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [],
        },
      },
      "type": "runs",
    },
    {
      "attributes": {
        "lastLogNumber": 1,
        "name": null,
        "status": "running",
      },
      "id": "3",
      "relationships": {
        "experiment": {
          "data": {
            "id": "3",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "3",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
  "included": [
    {
      "attributes": {
        "name": "experiment-1",
      },
      "id": "2",
      "type": "experiments",
    },
    {
      "attributes": {
        "name": "experiment-2",
      },
      "id": "3",
      "type": "experiments",
    },
  ],
}
`;

exports[`LogServer: get /runs ('host' / 'sqlite') > returns a 200 with all runs with requested related lastLogs 1`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 2,
        "name": "run-1",
        "status": "running",
      },
      "id": "1",
      "relationships": {
        "experiment": {
          "data": {
            "id": "2",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "2",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
    {
      "attributes": {
        "lastLogNumber": 0,
        "name": "run-2",
        "status": "completed",
      },
      "id": "2",
      "relationships": {
        "experiment": {
          "data": {
            "id": "2",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [],
        },
      },
      "type": "runs",
    },
    {
      "attributes": {
        "lastLogNumber": 1,
        "name": null,
        "status": "running",
      },
      "id": "3",
      "relationships": {
        "experiment": {
          "data": {
            "id": "3",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "3",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
  "included": [
    {
      "attributes": {
        "logType": "log-type",
        "number": 2,
        "values": {
          "v": "r1l2",
        },
      },
      "id": "2",
      "relationships": {
        "run": {
          "data": {
            "id": "1",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "log-type",
        "number": 1,
        "values": {
          "v": "r3l1",
        },
      },
      "id": "3",
      "relationships": {
        "run": {
          "data": {
            "id": "3",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
  ],
}
`;

exports[`LogServer: get /runs ('host' / 'sqlite') > returns a 200 with all runs with requested related lastLogs 2`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 2,
        "name": "run-1",
        "status": "running",
      },
      "id": "1",
      "relationships": {
        "experiment": {
          "data": {
            "id": "2",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "2",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
    {
      "attributes": {
        "lastLogNumber": 0,
        "name": "run-2",
        "status": "completed",
      },
      "id": "2",
      "relationships": {
        "experiment": {
          "data": {
            "id": "2",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [],
        },
      },
      "type": "runs",
    },
    {
      "attributes": {
        "lastLogNumber": 1,
        "name": null,
        "status": "running",
      },
      "id": "3",
      "relationships": {
        "experiment": {
          "data": {
            "id": "3",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "3",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
  "included": [
    {
      "attributes": {
        "name": "experiment-1",
      },
      "id": "2",
      "type": "experiments",
    },
    {
      "attributes": {
        "name": "experiment-2",
      },
      "id": "3",
      "type": "experiments",
    },
    {
      "attributes": {
        "logType": "log-type",
        "number": 2,
        "values": {
          "v": "r1l2",
        },
      },
      "id": "2",
      "relationships": {
        "run": {
          "data": {
            "id": "1",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "log-type",
        "number": 1,
        "values": {
          "v": "r3l1",
        },
      },
      "id": "3",
      "relationships": {
        "run": {
          "data": {
            "id": "3",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
  ],
}
`;

exports[`LogServer: get /runs ('participant' / 'sqlite') > returns a 200 with participant-owned runs 1`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 2,
        "name": "run-1",
        "status": "running",
      },
      "id": "1",
      "relationships": {
        "experiment": {
          "data": {
            "id": "1",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "2",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
}
`;

exports[`LogServer: get /runs ('participant' / 'sqlite') > returns a 200 with participant-owned runs with requested related experiment 1`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 2,
        "name": "run-1",
        "status": "running",
      },
      "id": "1",
      "relationships": {
        "experiment": {
          "data": {
            "id": "2",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "2",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
  "included": [
    {
      "attributes": {
        "name": "experiment-1",
      },
      "id": "2",
      "type": "experiments",
    },
  ],
}
`;

exports[`LogServer: get /runs ('participant' / 'sqlite') > returns a 200 with participant-owned runs with requested related lastLogs 1`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 2,
        "name": "run-1",
        "status": "running",
      },
      "id": "1",
      "relationships": {
        "experiment": {
          "data": {
            "id": "2",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "2",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
  "included": [
    {
      "attributes": {
        "logType": "log-type",
        "number": 2,
        "values": {
          "v": "r1l2",
        },
      },
      "id": "2",
      "relationships": {
        "run": {
          "data": {
            "id": "1",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
  ],
}
`;

exports[`LogServer: get /runs ('participant' / 'sqlite') > returns a 200 with participant-owned runs with requested related lastLogs 2`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 2,
        "name": "run-1",
        "status": "running",
      },
      "id": "1",
      "relationships": {
        "experiment": {
          "data": {
            "id": "2",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "2",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
  "included": [
    {
      "attributes": {
        "name": "experiment-1",
      },
      "id": "2",
      "type": "experiments",
    },
    {
      "attributes": {
        "logType": "log-type",
        "number": 2,
        "values": {
          "v": "r1l2",
        },
      },
      "id": "2",
      "relationships": {
        "run": {
          "data": {
            "id": "1",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
  ],
}
`;
